@@ -31,12 +31,6 @@ inter_log_filename: log/inter.log
 // Level range for sharing within a party
 party_share_level: 10
 
-// Disconnect players when the map server loses the connection to the char server?
-// NOTE: The default is 1 (yes) to prevent any kinds of exploits, but large servers experience connection loss
-// during high load times, in which case it might be desirable to set this to '0'.
-// NOTE: Don't use 'yes/no' here, use 1 (yes)/ 0 (no).
-kick_on_disconnect: 1
-
 // SQL version options only
 
 // Char-Save method
@@ -74,7 +68,7 @@ read_gm_interval: 10
 // after 8 hours of inactivity).
 // 0 disables (default). Enable it only if you are getting
 // "MySQL server has gone Away" errors due to lack of activity on your server
-//connection_ping_interval: 3
+connection_ping_interval: 7
 
 // MySQL Login SQL Server
 login_server_ip: 127.0.0.1
